Moved helper methods to utils.py. More refinement on main.py and openapi.yaml
