# openapi.yaml
@@ -46,13 +46,6 @@ paths:
             type: string
         required: true
         description: The query text used to search for relevant interactions.
-      - in: query
-        name: category
-        schema:
-            type: string
-            enum: [Personal, Work, Education, Entertainment, Other]
-        required: false
-        description: The category used to filter interactions.
       responses:
         "200":
           description: OK
@@ -67,9 +60,7 @@ paths:
         Adds a new interaction to the conversation history for the specified user.
         Requires the user input and the ChatGPT response to be provided.
         The user input is limited to 1000 characters.
-        For the 'author' field, use 'ChatG
-
-PT' for responses generated by ChatGPT, and 'User' for user inputs.
+        For the 'author' field, use 'ChatGPT' for responses generated by ChatGPT, and 'User' for user inputs.
       parameters:
       - in: path
         name: username
@@ -136,7 +127,6 @@ components:
       - chatgpt_response
       - document_name
       - author
-      - category
       properties:
         user_input:
           type: string
@@ -158,7 +148,6 @@ components:
         category:
           type: string
           description: The category used to tag or categorize the interaction. Choose from 'Personal', 'Work', 'Education', 'Entertainment', or 'Other'.
-          required: true
           enum: [Personal, Work, Education, Entertainment, Other]
     deleteMemoryRequest:
       type: object
